--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -101,6 +101,10 @@
       "key": "{#separator}│  {#keys}󰍛 Memory"
     },
     {
+      "type": "swap",
+      "key": "{#separator}│  {#keys}󰏗 Swap"
+    },
+    {
       "type": "disk",
       "key": "{#separator}│  {#keys}󰋊 Disk (/)",
       "folders": "/"
