--- a/tmux/.config/tmux/tmux.keybinds.conf
+++ b/tmux/.config/tmux/tmux.keybinds.conf
@@ -7,7 +7,7 @@ bind-key C-a send-prefix
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 
 # Windows
-bind c new-window -c "$HOME"
+bind c new-window -c "#{pane_current_path}"
 bind N new -c "$HOME" # Create a new session
 bind s split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
