--- a/hypridle/.config/hypr/hypridle.conf
+++ b/hypridle/.config/hypr/hypridle.conf
@@ -1,27 +1,38 @@
 general {
-    lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
-    before_sleep_cmd = loginctl lock-session    # lock before suspend.
-    after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
+    lock_cmd = pidof hyprlock || hyprlock       # Prevent launching multiple instances of hyprlock
+    before_sleep_cmd = loginctl lock-session    # Lock the session before suspend
+    after_sleep_cmd = hyprctl dispatch dpms on  # Wake display immediately on resume
 }
 
+# After 5 minutes: dim screen to avoid OLED burn-in
 listener {
-    timeout = 300                                # 5min.
-    on-timeout = brightnessctl -s set 10         # set monitor backlight to minimum, avoid 0 on OLED monitor.
-    on-resume = brightnessctl -r                 # monitor backlight restore.
+    timeout = 300
+    on-timeout = brightnessctl -s set 10        # Set brightness to minimum, but not zero
+    on-resume = brightnessctl -r                # Restore brightness when activity resumes
 }
 
+# After 6 minutes: launch hyprlock (lock screen UI)
 listener {
-    timeout = 420                                 # 7min
-    on-timeout = loginctl lock-session            # lock screen when timeout has passed
+    timeout = 360
+    on-timeout = pidof hyprlock || hyprlock
 }
 
+# After 7 minutes: system lock the session (for extra safety)
 listener {
-    timeout = 480                                 # 8min
-    on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
+    timeout = 420
+    on-timeout = loginctl lock-session
 }
 
+# After 8 minutes: turn off the display
 listener {
-    timeout = 1200                                # 20min
-    on-timeout = systemctl suspend                # suspend pc
+    timeout = 480
+    on-timeout = hyprctl dispatch dpms off      # Turn screen off
+    on-resume = hyprctl dispatch dpms on        # Turn screen on when user interacts
 }
+
+# After 20 minutes: suspend the machine
+listener {
+    timeout = 1200
+    on-timeout = systemctl suspend
+}
+
