fix: move workspace keybinds

--- a/hyprland-setup/.config/hypr/hyprland/keybinds.conf
+++ b/hyprland-setup/.config/hypr/hyprland/keybinds.conf
@@ -57,12 +57,12 @@ bind = $mainMod CTRL, k, resizeactive, 0 -20
 bind = $mainMod CTRL, j, resizeactive, 0 20
 
 # Switch workspace and move window
-bind = SUPER, N, exec, hyprctl dispatch workspace $(($(hyprctl activeworkspace -j | jq .id) + 1))
-bind = SUPER, P, exec, hyprctl dispatch workspace $(($(hyprctl activeworkspace -j | jq .id) - 1))
-bind = SUPER shift, N, exec, hyprctl dispatch movetoworkspace $(($(hyprctl activeworkspace -j | jq .id) + 1))
-bind = SUPER shift, P, exec, hyprctl dispatch movetoworkspace $(($(hyprctl activeworkspace -j | jq .id) - 1))
-bind = SUPER, left, exec, hyprctl dispatch workspace $(($(hyprctl activeworkspace -j | jq .id) - 1))
-bind = SUPER, right, exec, hyprctl dispatch workspace $(($(hyprctl activeworkspace -j | jq .id) + 1))
+bind = SUPER, N, exec, ~/.config/scripts/keybinds/workspace_next.sh
+bind = SUPER, P, exec, ~/.config/scripts/keybinds/workspace_prev.sh
+bind = SUPER SHIFT, N, exec, ~/.config/scripts/keybinds/move_to_next.sh
+bind = SUPER SHIFT, P, exec, ~/.config/scripts/keybinds/move_to_prev.sh
+bind = SUPER, left, exec, ~/.config/scripts/keybinds/workspace_prev.sh
+bind = SUPER, right, exec, ~/.config/scripts/keybinds/workspace_next.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
