refactor: change default browser

--- a/hyprland-setup/.config/hypr/hyprland/keybinds.conf
+++ b/hyprland-setup/.config/hypr/hyprland/keybinds.conf
@@ -4,7 +4,7 @@
 $terminal = kitty
 $fileManager = nautilus
 $menu = wofi --insensitive --show drun
-$browser = zen-twilight
+$browser = firefox
 
 $mainMod = SUPER
 $key = tab
