--- a/hyprland-setup/.config/hypr/hyprland/monitor.conf
+++ b/hyprland-setup/.config/hypr/hyprland/monitor.conf
@@ -3,3 +3,4 @@
 ################
 
 monitor=,preferred,auto,auto
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
