--- a/tmux/.config/tmux/tmux.keybinds.conf
+++ b/tmux/.config/tmux/tmux.keybinds.conf
@@ -39,4 +39,4 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 # Display lazy tools
 bind -r g display-popup -d '#{pane_current_path}' -w75% -h95% -E lazygit
-bind -r e display-popup -d '#{pane_current_path}' -w90% -h90% -E lazysql
+bind -r e display-popup -w90% -h90% -E 'nvim ~/Workspace/notes/schedule.md'
