feat: add lazydocker keybind

--- a/tmux/.config/tmux/tmux.keybinds.conf
+++ b/tmux/.config/tmux/tmux.keybinds.conf
@@ -41,3 +41,4 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 bind -r g display-popup -d '#{pane_current_path}' -w75% -h95% -E lazygit
 bind -r e display-popup -w90% -h90% -E 'nvim ~/Workspace/notes/schedule.md'
 bind -r t display-popup -w75% -h95% -E 'nvim ~/Workspace/notes/todo.md'
+bind -r o display-popup -w75% -h90% -E "sudo -u az lazydocker"
