feat: auto lock and switch to workspace 10 on lid close

--- a/hyprland-setup/.config/hypr/hyprland/keybinds.conf
+++ b/hyprland-setup/.config/hypr/hyprland/keybinds.conf
@@ -13,7 +13,6 @@ $swaync=swaync-client -t -sw
 
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Q, killactive,
-# bind = $mainMod, ESCAPE, exit,
 bind = $mainMod, E, exec, $swaync
 bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, SPACE, exec, $menu
@@ -21,6 +20,8 @@ bind = $mainMod, M, fullscreen
 bind = $mainMod, Y, togglefloating,
 bind = $mainMod, I, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
+bind = $mainMod, S, togglespecialworkspace
+bind = $mainMod SHIFT, S, movetoworkspace, special
 
 # System
 bind = $mainMod, B, exec, $browser
@@ -30,7 +31,7 @@ bind = SHIFT, PRINT, exec, hyprshot -zm region -o ~/Pictures/screenshots
 bind = $mainMod SHIFT, PRINT, exec, hyprshot -zm window -o ~/Pictures/screenshots
 
 # Lid Switch
-bindl=,switch:on:Lid Switch, exec, hyprctl dispatch dpms off && hyprctl dispatch exec hyprlock
+bindl=,switch:on:Lid Switch, exec, ~/.config/scripts/lid-close.sh
 bindl=,switch:off:Lid Switch, exec, hyprctl dispatch dpms on
 
 # OSD window
