perf: update kitty

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -30,12 +30,12 @@ sync_to_monitor no
 force_ltr no
 mouse_hide_wait 3.0
 
-scrollback_lines 8000
+scrollback_lines 1000
 paste_actions quote-urls-at-prompt
 strip_trailing_spaces never
 select_by_word_characters @-./_~?&=%+#
 show_hyperlink_targets yes
-remote_kitty if-needed
+remote_kitty no
 
 cursor_trail 2
 cursor_trail_start_threshold 0
