--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -199,7 +199,7 @@
     ]
   },
   "bluetooth": {
-    "on-click": "blueman-manager",
+    "on-click": "blueberry",
     "format-on": "󰂯 {status}",
     "format-off": "󰂲 {status}",
     "format-disabled": "󰂲 off",
