chore: update theme

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,10 @@
 # ╭──────────────────────────────────────────────────────────╮
 # │                   	       Theme		                     │
 # ╰──────────────────────────────────────────────────────────╯
-include ./kanagawa-wave.conf
+# BEGIN_KITTY_THEME
+# Kanagawa
+include current-theme.conf
+# END_KITTY_THEME
 
 # ╭──────────────────────────────────────────────────────────╮
 # │                   Font and text config                   │
