--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -1,5 +1,10 @@
 {
-  "position": "top",
+  "position": "bottom",
+  "layer": "top",
+  "margin-top": 4,
+  "margin-left": 6,
+  "margin-right": 6,
+  "margin-bottom": 4,
   "modules-left": [
     "hyprland/workspaces",
     "cpu",
