chore: change active border color for hyprland

--- a/hyprland-setup/.config/hypr/hyprland/decoration.conf
+++ b/hyprland-setup/.config/hypr/hyprland/decoration.conf
@@ -5,7 +5,7 @@ general {
   gaps_in = 4
   gaps_out = 8
   border_size = 2
-  col.active_border = rgb(ee99a0)
+  col.active_border = rgb(AE75DA)
   col.inactive_border = rgba(595959aa)
   resize_on_border = true
   allow_tearing = true
