--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -1,20 +1,22 @@
 {
-  // "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+  "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
+    "source": "$HOME/.config/fastfetch/png/arch.png",
+    "type": "kitty-icat",
     "padding": {
       "top": 2,
-      "left": 1,
-      "right": 2
-    }
+      "right": 5
+    },
+    "height": 10
   },
   "display": {
-    "separator": "  "
+    "separator": "  "
   },
   "modules": [
     // Title
     {
       "type": "title",
-      "format": "{#1}╭───────────── {#}{user-name-colored}"
+      "format": "{#1}╭──────────────────────── {#}{user-name-colored} ────────────────────────╮"
     },
     // System Information
     {
@@ -122,7 +124,7 @@
     // Footer
     {
       "type": "custom",
-      "format": "{#1}╰───────────────────────────────╯"
+      "format": "{#1}╰───────────────────────────────────────────────────────╯"
     }
   ]
 }
