--- a/hypridle/.config/hypr/hypridle.conf
+++ b/hypridle/.config/hypr/hypridle.conf
@@ -1,38 +1,31 @@
 general {
-    lock_cmd = pidof hyprlock || hyprlock       # Prevent launching multiple instances of hyprlock
-    before_sleep_cmd = loginctl lock-session    # Lock the session before suspend
-    after_sleep_cmd = hyprctl dispatch dpms on  # Wake display immediately on resume
+    lock_cmd = pidof hyprlock || hyprlock
+    before_sleep_cmd = loginctl lock-session
+    after_sleep_cmd = hyprctl dispatch dpms on
+    inhibit_sleep = 3
 }
 
-# After 5 minutes: dim screen to avoid OLED burn-in
+listener {
+    timeout = 150
+    on-timeout = brightnessctl -s set 10
+    on-timeout = brightnessctl -sd rgb:kbd_backlight set 0
+    on-resume = brightnessctl -r
+    on-resume = brightnessctl -rd rgb:kbd_backlight
+}
+
 listener {
     timeout = 300
-    on-timeout = brightnessctl -s set 10        # Set brightness to minimum, but not zero
-    on-resume = brightnessctl -r                # Restore brightness when activity resumes
-}
-
-# After 6 minutes: launch hyprlock (lock screen UI)
-listener {
-    timeout = 360
-    on-timeout = pidof hyprlock || hyprlock
-}
-
-# After 7 minutes: system lock the session (for extra safety)
-listener {
-    timeout = 420
     on-timeout = loginctl lock-session
 }
 
-# After 8 minutes: turn off the display
 listener {
-    timeout = 480
-    on-timeout = hyprctl dispatch dpms off      # Turn screen off
-    on-resume = hyprctl dispatch dpms on        # Turn screen on when user interacts
+    timeout = 330
+    on-timeout = hyprctl dispatch dpms off
+    on-resume = hyprctl dispatch dpms on
 }
 
-# After 20 minutes: suspend the machine
 listener {
-    timeout = 1200
+    timeout = 600
     on-timeout = systemctl suspend
 }
 
