fix: kill hyprlock after login

--- a/hypridle/.config/hypr/hypridle.conf
+++ b/hypridle/.config/hypr/hypridle.conf
@@ -1,5 +1,5 @@
 general {
-    lock_cmd = pidof hyprlock || hyprlock       # Prevent launching multiple instances of hyprlock
+    lock_cmd = pidof hyprlock || ~/.config/scripts/hyprlock-wrapper.sh       # Prevent launching multiple instances of hyprlock
     unlock_cmd = killall hyprlock               # kills hyprlock when unlocking (this is always run when "loginctl unlock-session" is called)
     before_sleep_cmd = loginctl lock-session    # Lock the session before suspend
     after_sleep_cmd = hyprctl dispatch dpms on  # Wake display immediately on resume
