feat: toggle waybar

--- a/hyprland-setup/.config/hypr/hyprland/keybinds.conf
+++ b/hyprland-setup/.config/hypr/hyprland/keybinds.conf
@@ -46,6 +46,9 @@ bind = ,Caps_Lock, exec, swayosd-client --caps-lock
 bind = ALT, Tab, cyclenext,
 bind = ALT, Tab, bringactivetotop,
 
+# Toggle waybar
+bind = SUPER, w, exec, ~/.config/scripts/toggle-waybar.sh
+
 # Resize window
 bind = $mainMod CTRL, right, resizeactive, 20 0
 bind = $mainMod CTRL, left, resizeactive, -20 0
