--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -14,7 +14,7 @@ set -g renumber-windows on
 set -g detach-on-destroy off
 
 # Status line
-set -g status-justify "left"
+set -g status-justify "centre"
 set -g status-position bottom
 
 # Vim mode
