--- a/tmux/.config/tmux/tmux.plugins.conf
+++ b/tmux/.config/tmux/tmux.plugins.conf
@@ -13,6 +13,10 @@ set -g @plugin 'rose-pine/tmux' # theme
 
 set -g @plugin 'omerxx/tmux-sessionx' # session manager
 
+set -g @plugin 'tmux-plugins/tmux-battery' # battery
+set -g @plugin 'RobertKirk/tmux-ram' # ram
+set -g @plugin 'pwittchen/tmux-plugin-ram'
+
 #__Plugin setup__
 set -g @continuum-restore 'off'
 set -g @resurrect-capture-pane-contents 'off'
