--- a/tmux/.config/tmux/tmux.status.conf
+++ b/tmux/.config/tmux/tmux.status.conf
@@ -25,3 +25,23 @@ set -g @rose_pine_window_status_separator '  '
 set -g @rose_pine_default_window_behavior 'on'
 set -g @rose_pine_show_current_program 'on'
 set -g @rose_pine_show_pane_directory 'on'
+
+set -g @batt_icon_charge_tier8 '🌕'
+set -g @batt_icon_charge_tier7 '🌖'
+set -g @batt_icon_charge_tier6 '🌖'
+set -g @batt_icon_charge_tier5 '🌗'
+set -g @batt_icon_charge_tier4 '🌗'
+set -g @batt_icon_charge_tier3 '🌘'
+set -g @batt_icon_charge_tier2 '🌘'
+set -g @batt_icon_charge_tier1 '🌑'
+set -g @batt_icon_status_charged '🔋'
+set -g @batt_icon_status_charging '⚡'
+set -g @batt_icon_status_discharging '👎'
+
+set -g @ram_low_icon "ᚋ"
+set -g @ram_medium_icon "ᚌ"
+set -g @ram_high_icon "ᚍ"
+
+set -g @rose_pine_status_right_prepend_section '#[fg=#ffa066] #{ram_icon} #{ram}  #{battery_icon} #{battery_percentage} #{battery_remain}'
+set -g @rose_pine_status_left_append_section ''
+set -g @rose_pine_status_right_append_section ''
