--- a/tmux/.config/tmux/tmux.status.conf
+++ b/tmux/.config/tmux/tmux.status.conf
@@ -3,7 +3,7 @@ set -g @rose_pine_variant 'moon' # 'main', 'moon' or 'dawn'
 set -g @rose_pine_host 'off'
 set -g @rose_pine_date_time '%a, %d %b %Y  %H:%M'
 set -g @rose_pine_user 'off'
-set -g @rose_pine_directory 'on'
+set -g @rose_pine_directory 'off'
 
 set -g @rose_pine_bar_bg_disable 'on'
 set -g @rose_pine_bar_bg_disabled_color_option 'default'
@@ -16,7 +16,7 @@ set -g @rose_pine_current_window_icon '| '
 set -g @rose_pine_folder_icon ''
 set -g @rose_pine_username_icon ' |'
 set -g @rose_pine_hostname_icon '󰒋 |'
-set -g @rose_pine_date_time_icon '󰃰 |'
+set -g @rose_pine_date_time_icon '󰃰'
 
 set -g @rose_pine_right_separator '  '
 set -g @rose_pine_window_separator '  '
