--- a/hyprland-setup/.config/hypr/hyprland/decoration.conf
+++ b/hyprland-setup/.config/hypr/hyprland/decoration.conf
@@ -9,7 +9,8 @@ general {
   col.inactive_border = rgba(595959aa)
   resize_on_border = true
   allow_tearing = true
-  layout = dwindle
+  # layout = dwindle
+  layout = scrolling
 }
 
 decoration {
