--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -6,3 +6,4 @@ source = ~/.config/hypr/hyprland/decoration.conf
 source = ~/.config/hypr/hyprland/device.conf
 source = ~/.config/hypr/hyprland/keybinds.conf
 source = ~/.config/hypr/hyprland/layers.conf
+source = ~/.config/hypr/hyprland/plugins.conf
