--- a/hyprland-setup/.config/hypr/hyprland/keybinds.conf
+++ b/hyprland-setup/.config/hypr/hyprland/keybinds.conf
@@ -117,3 +117,10 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
+bind = $mainMod, period, layoutmsg, move +col
+bind = $mainMod, comma, layoutmsg, move -col
+bind = $mainMod SHIFT, period, layoutmsg, movewindowto r
+bind = $mainMod SHIFT, comma, layoutmsg, movewindowto l
+bind = $mainMod SHIFT, up, layoutmsg, movewindowto u
+bind = $mainMod SHIFT, down, layoutmsg, movewindowto
