--- a/hyprland-setup/.config/hypr/hyprland/auto-start.conf
+++ b/hyprland-setup/.config/hypr/hyprland/auto-start.conf
@@ -1,5 +1,6 @@
-exec-once = swaybg -i ~/Pictures/wallpapers/WLOP/008.jpg
+exec-once = swaybg -i ~/Pictures/wallpapers/WLOP/30.jpg --mode fill
 exec-once = waybar & swaync & hypridle & hyprpaper
+exec-once = hyprpm reload
 exec-once = swayosd-server
 exec-once = swayosd-libinput-backend
 exec-once = fcitx5
