--- a/hyprland-setup/.config/hypr/hyprland/auto-start.conf
+++ b/hyprland-setup/.config/hypr/hyprland/auto-start.conf
@@ -1,4 +1,4 @@
-exec-once = swaybg -i ~/Pictures/wallpapers/WLOP/30.jpg --mode fill
+exec-once = swaybg -i ~/Pictures/wallpapers/windows.jpg --mode fill
 exec-once = waybar & swaync & hypridle & hyprpaper
 exec-once = hyprpm reload
 exec-once = swayosd-server
@@ -6,5 +6,5 @@ exec-once = swayosd-libinput-backend
 exec-once = fcitx5
 
 exec-once = ~/.config/scripts/auto-start.sh
-exec-once = ~/.config/scripts/auto-change-wallpaper.sh
+# exec-once = ~/.config/scripts/auto-change-wallpaper.sh
 exec-once = ~/.config/scripts/battery-notify.sh
