--- a/hyprland-setup/.config/hypr/hyprland/auto-start.conf
+++ b/hyprland-setup/.config/hypr/hyprland/auto-start.conf
@@ -1,4 +1,5 @@
-exec-once = swaybg -i ~/Pictures/wallpapers/windows.jpg --mode fill
+# exec-once = swaybg -i ~/Pictures/wallpapers/windows.jpg --mode fill
+exec-once = swaybg -i ~/Pictures/wallpaper.jpg --mode fill
 exec-once = waybar & swaync & hypridle & hyprpaper
 exec-once = hyprpm reload
 exec-once = swayosd-server
