--- a/tmux/.config/tmux/tmux.keybinds.conf
+++ b/tmux/.config/tmux/tmux.keybinds.conf
@@ -40,5 +40,5 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 # Display lazy tools
 bind -r g display-popup -d '#{pane_current_path}' -w75% -h95% -E 'nvm use lts > /dev/null 2>&1 && lazygit'
 bind -r e display-popup -w90% -h90% -E 'nvm use lts > /dev/null 2>&1 && nvim ~/Workspace/notes/schedule.md'
-bind -r t display-popup -w75% -h95% -E 'cd ~/Workspace/notes/ && nvm use lts > /dev/null 2>&1 && nvim $(date +%F).md'
+bind -r t display-popup -w75% -h95% -E 'cd ~/Workspace/notes/ && nvm use lts > /dev/null 2>&1 && nvim todos.md'
 bind -r o display-popup -w75% -h90% -E "lazydocker"
