--- a/hyprlock/.config/hypr/hyprlock.conf
+++ b/hyprlock/.config/hypr/hyprlock.conf
@@ -120,7 +120,7 @@ label {
 # Image
 image {
     monitor =
-    path = ~/dotfiles/images/avatar.jpg
+    path = ~/dotfiles/images/avatar2.jpg
     size = 100,100
     rounding = 120
     border_size = 2
