--- a/hyprland-setup/.config/hypr/hyprland/auto-start.conf
+++ b/hyprland-setup/.config/hypr/hyprland/auto-start.conf
@@ -1,7 +1,7 @@
 exec-once = swaybg -i ~/Pictures/wallpapers/windows.jpg --mode fill
 # exec-once = swaybg -i ~/Pictures/wallpaper.jpg --mode fill
 exec-once = waybar & swaync & hypridle & hyprpaper
-exec-once = hyprpm reload
+# exec-once = hyprpm reload
 exec-once = swayosd-server
 exec-once = swayosd-libinput-backend
 exec-once = fcitx5
